# OP2_reader

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  resultArray.ipynb  strength_workflow.ipynb  testing.ipynb
decoders/: lama.py  oes_bar.py  oesnlxr.py
femdata/: __init__.py  result_array.py
op2_native/: __init__.py  fortran_io.py  models.py  op2_reader.py  plots.py  reader.py
op2_native/decoders/: __init__.py  geom_dat.py  lama.py  oef1.py  oes1x1_shell.py  oes_bar.py  oes_cbush.py  oes_peek.py  oes_search.py  oes_solid.py  oesnlxr.py  ogpwg.py  opg1.py  oqg1.py  ostr1.py  ougv1.py
