[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "op2_native"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
plots = ["plotly>=5.0"]

[tool.setuptools]
packages = ["op2_native", "op2_native.decoders"]

[tool.setuptools.package-dir]
op2_native = "."
"op2_native.decoders" = "decoders"
